--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0f814a22",
+   "id": "3027a1d9",
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3d44ca4b",
+   "id": "0f41af86",
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "16865c61",
+   "id": "77d62a9f",
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bb8904bb",
+   "id": "d38fce1c",
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2446,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "297b795f",
+   "id": "f94403c3",
    "metadata": {},
    "outputs": [
     {
@@ -2479,7 +2479,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1be58ac5",
+   "id": "5afc3688",
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2497,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c4a569fe",
+   "id": "cda57403",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2639,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d34b4c28",
+   "id": "b5682f5b",
    "metadata": {},
    "outputs": [
     {
@@ -2662,7 +2662,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "049b74c7",
+   "id": "7e4eb6a1",
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2684,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3abc92f4",
+   "id": "536ca53b",
    "metadata": {},
    "outputs": [
     {
@@ -2705,7 +2705,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "fdb99ada",
+   "id": "277a2941",
    "metadata": {},
    "outputs": [
     {
@@ -2728,7 +2728,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "20d7ee12",
+   "id": "10e6c9c8",
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "dd4784b3",
+   "id": "0c05d128",
    "metadata": {},
    "outputs": [
     {
@@ -2777,7 +2777,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8e04cae3",
+   "id": "69c57d99",
    "metadata": {},
    "outputs": [
     {
@@ -2800,7 +2800,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "89bc7078",
+   "id": "cbdb6abc",
    "metadata": {},
    "outputs": [
     {
@@ -2823,7 +2823,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "5df5efd6",
+   "id": "7c1cdfea",
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2846,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5b59cf54",
+   "id": "f02dd4d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2857,7 +2857,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "dec6d0ba",
+   "id": "f325ff28",
    "metadata": {},
    "outputs": [
     {
@@ -2889,7 +2889,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "74d5b49a",
+   "id": "4ccc2d52",
    "metadata": {},
    "outputs": [
     {
@@ -2921,7 +2921,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e263f548",
+   "id": "105fe0d9",
    "metadata": {},
    "outputs": [
     {
@@ -3063,7 +3063,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "810f057f",
+   "id": "b06af575",
    "metadata": {},
    "outputs": [
     {
@@ -3205,7 +3205,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "f2e54862",
+   "id": "aadd9e1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3219,7 +3219,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "613e6a2f",
+   "id": "3953c62b",
    "metadata": {},
    "outputs": [
     {
@@ -3239,7 +3239,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "979d575b",
+   "id": "45fa0a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3253,7 +3253,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "f1b90b5d",
+   "id": "65ead7f0",
    "metadata": {},
    "outputs": [
     {
@@ -3273,7 +3273,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "c5a3d77e",
+   "id": "7daaa637",
    "metadata": {},
    "outputs": [
     {
@@ -3416,7 +3416,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2dcef4f5",
+   "id": "371865f6",
    "metadata": {},
    "outputs": [
     {
@@ -3439,7 +3439,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "be3841d1",
+   "id": "975e21e6",
    "metadata": {},
    "outputs": [
     {
@@ -3462,7 +3462,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e4e13548",
+   "id": "665e04b4",
    "metadata": {},
    "outputs": [
     {
@@ -3542,7 +3542,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b3de1db1",
+   "id": "a1144363",
    "metadata": {},
    "outputs": [
     {
@@ -3567,7 +3567,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "0fb64f89",
+   "id": "8a0c610c",
    "metadata": {},
    "outputs": [
     {
@@ -3593,7 +3593,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "44640e00",
+   "id": "c392b913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3612,7 +3612,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "acd9bb09",
+   "id": "d2d50514",
    "metadata": {},
    "outputs": [
     {
@@ -3682,7 +3682,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d59f569b",
+   "id": "70c9eab2",
    "metadata": {},
    "outputs": [
     {
@@ -3757,7 +3757,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "c142e2f3",
+   "id": "eb96a88d",
    "metadata": {},
    "outputs": [
     {
@@ -3796,7 +3796,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "59c99d34",
+   "id": "76cf3679",
    "metadata": {},
    "outputs": [
     {
@@ -3926,7 +3926,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "d9022124",
+   "id": "804ed331",
    "metadata": {},
    "outputs": [
     {
@@ -3964,7 +3964,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "277aab1d",
+   "id": "13f1fbd6",
    "metadata": {},
    "outputs": [
     {
@@ -4003,7 +4003,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "df68f9d7",
+   "id": "ad0b8bfc",
    "metadata": {},
    "outputs": [
     {
@@ -4041,7 +4041,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "d8ef2870",
+   "id": "2fd53678",
    "metadata": {},
    "outputs": [
     {
@@ -4080,7 +4080,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "6af646e9",
+   "id": "da949a4c",
    "metadata": {},
    "outputs": [
     {
@@ -4118,7 +4118,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d4e95a61",
+   "id": "c0cc36df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4129,7 +4129,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "42941b98",
+   "id": "92505938",
    "metadata": {},
    "outputs": [
     {
@@ -4162,7 +4162,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "5f004573",
+   "id": "3ae31694",
    "metadata": {},
    "outputs": [
     {
@@ -4395,7 +4395,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "fd496078",
+   "id": "83d0716f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4408,7 +4408,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "71286cad",
+   "id": "92c8492c",
    "metadata": {},
    "outputs": [
     {
@@ -4445,7 +4445,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "1956d7d3",
+   "id": "e3493a8d",
    "metadata": {},
    "outputs": [
     {
@@ -4482,7 +4482,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d725d52f",
+   "id": "6e133520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4495,7 +4495,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "c6b69b78",
+   "id": "d004b5ff",
    "metadata": {},
    "outputs": [
     {
@@ -4635,7 +4635,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "aec6975d",
+   "id": "1be5dc3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4648,7 +4648,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "4dd8851c",
+   "id": "ad7f7901",
    "metadata": {},
    "outputs": [
     {
@@ -4685,7 +4685,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "831c97b5",
+   "id": "562572bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4698,7 +4698,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "3b7fa3ec",
+   "id": "71bda7d0",
    "metadata": {},
    "outputs": [
     {
@@ -4734,7 +4734,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "dc95be8d",
+   "id": "a8532d5f",
    "metadata": {},
    "outputs": [
     {
@@ -4770,7 +4770,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "10c69560",
+   "id": "c6b9ff9f",
    "metadata": {},
    "outputs": [
     {
@@ -4913,7 +4913,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "0ee78839",
+   "id": "9470b598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4924,7 +4924,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "f7b9646d",
+   "id": "98ed0bf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4935,7 +4935,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "ecc73b1b",
+   "id": "9a839ae6",
    "metadata": {},
    "outputs": [
     {
@@ -4971,7 +4971,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "a55d15ee",
+   "id": "c0d5f81c",
    "metadata": {},
    "outputs": [
     {
@@ -5125,7 +5125,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "bc727cc7",
+   "id": "20dfac30",
    "metadata": {},
    "outputs": [
     {
@@ -5274,7 +5274,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "f4a60990",
+   "id": "38eaa402",
    "metadata": {},
    "outputs": [
     {
@@ -5422,7 +5422,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "97550a52",
+   "id": "f6b54bf6",
    "metadata": {},
    "outputs": [
     {
@@ -5566,11 +5566,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8754ec21",
+   "execution_count": 109,
+   "id": "561942a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "80c84323",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "92e6b2b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felix\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_cat = Cat('Felix')\n",
+    "print(first_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "f3c07f15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garfield\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_cat = Cat('Garfield')\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "c767d03b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "b606323b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof! woof!'"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "print(    first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b50860c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_dog = Dog('Lady', 'brown', 'woof!')\n",
+    "print(    first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
   }
  ],
  "metadata": {
